@@ -24,6 +24,9 @@ RELEASE 0.97 - XXX
     different drive letters.  (This caused an infinite loop when
     trying to write .sconsign files.)
 
+  - Fully support Scanners that use a dictionary to map file suffixes
+    to other scanners.
+
   From Gary Oberbrunner:
 
   - Document use of ${} to execute arbitrary Python code.
